Use OpenAPI 3.1 because it is better supported by Speakeasy

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,7 @@ spring.application.name=bookstore-api
 # Specify the path of the OpenAPI documentation
 springdoc.api-docs.path=/api-docs
 
+springdoc.api-docs.version=OPENAPI_3_1
+
 # Specify the path of the Swagger UI
 springdoc.swagger-ui.path=/swagger-ui.html
